fix 3rd row titling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 .card-title{
   font-size: 4.5vw;
-  height: 28%;
+  height: 25%;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
